Fixed space on top of logo and top bar being too much, so shifted everything up. Also fixed stripe details in subscription page to not show and some logic when to show trial and subscription info. Also added for mobile only the back to top button

--- a/public/wp-content/plugins/medicompare/assets/css/pharmacy-portal.css
+++ b/public/wp-content/plugins/medicompare/assets/css/pharmacy-portal.css
@@ -860,3 +860,12 @@ h1.mc-section-title {
     margin-top: 20px;
     width: 100%;
 }
+
+.wp-block-template-part {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+.wp-block-group {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
